--- a/resources/views/emails/otp.edge
+++ b/resources/views/emails/otp.edge
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      OTP Verification
+    </title>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Plus Jakarta Sans' , sans-serif;
+        background-color: #f5f5f5;
+        margin: 0;
+        padding: 0;
+      }
+      
+      .email-container {
+        max-width: 600px;
+        margin: 50px auto;
+        background: #F6D4E8;
+        border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+      }
+      
+      .email-header {
+        background-color: #AE2D68;
+        color: #ffffff;
+        text-align: center;
+        padding: 20px;
+      }
+      
+      .email-header h1 {
+        font-size: 28px;
+        margin: 0;
+      }
+      
+      .email-body {
+        padding: 28px;
+        text-align: center;
+      }
+      
+      .email-body h2 {
+        color: #333333;
+        font-size: 24px;
+        margin: 20px 0;
+      }
+      
+      .email-body p {
+        color: #1E1E1E;
+        font-size: 20px;
+        margin: 10px 0 30px;
+      }
+      
+      .otp-code {
+        display: inline-block;
+        font-size: 24px;
+        color: #000000;
+        background: #f0f0f0;
+        padding: 10px 20px;
+        border-radius: 5px;
+        margin: 20px 0;
+        font-weight: bold;
+      }
+      
+      .email-footer {
+        background-color: #AE2D68;
+        color: #ffffff;
+        text-align: center;
+        padding: 15px;
+        font-size: 18px;
+      }
+    </style>
+  </head>
   <body>
-    <h2>Hi,</h2>
-    <p>Your OTP code is:</p>
-    <h1>{{ otp }}</h1>
-    <p>This code is used to verify your email: <b>{{ email }}</b></p>
-    <p>Do not share this code with anyone.</p>
-    <br />
-    <p>Regards,<br>Abby n Bev Team</p>
+    <div class="email-container">
+      <div class="email-header">
+        <h1>
+          OTP Verification
+        </h1>
+      </div>
+      <img 
+        src="http://localhost:3333/images/Logoabby.png"
+        alt="Abby n Bev Logo"
+        style="display:block;margin:0 auto;width:100px;max-width:150px;">
+      <div class="email-body">
+        <h2>
+          Hi, {{ email }}
+        </h2>
+        <p>
+          Use the following OTP to verify your account. The OTP is valid for 2 minutes.
+        </p>
+        <div class="otp-code">
+          {{ otp }}
+        </div>
+        <p>
+          If you didn't request this, please ignore this email.
+        </p>
+      </div>
+      <div class="email-footer">
+        &copy; {{ new Date().getFullYear() }} POV. All Rights Reserved.
+      </div>
+    </div>
   </body>
 </html>
