update faq, banner headline CMS
update

--- a/resources/views/emails/otp.edge
+++ b/resources/views/emails/otp.edge
@@ -99,7 +99,7 @@
         </p>
       </div>
       <div class="email-footer">
-        &copy; {{ new Date().getFullYear() }} POV. All Rights Reserved.
+        &copy; {{ currentYear }} CV. Gaya Beauty Utama, All Rights Reserved.
       </div>
     </div>
   </body>
