--- a/resources/views/emails/otp.edge
+++ b/resources/views/emails/otp.edge
@@ -98,7 +98,7 @@
       <!-- Body -->
       <div class="email-body">
         <h2>
-          Hi, {{ email }}
+          Hi, {{ name }}
         </h2>
         <p>
           Use the following OTP to verify your account. The OTP is valid for 2
